--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,5 +2,6 @@
     text-align: left;
     color: rgb(0, 0, 0);
     font-size: xx-large;
-    margin-top: 0%;
+    position: relative;
+    bottom: 50px;
 }
