Changed website theme color and appended navbar to top, still working on navbar and content positioning

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,11 @@
+body {
+    background-color: rgb(21, 21, 21);
+}
+
+
 .home-container h1 {
     text-align: left;
-    color: rgb(0, 0, 0);
+    color: rgb(221, 221, 221);
     font-size: xx-large;
-    position: relative;
-    bottom: 50px;
+
 }
