--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -11,12 +11,14 @@
 .navbar ul {
   list-style-type: none;
   display: flex;
+  justify-content: center;
   gap: 40px;
 }
 
 .navbar a {
   color: gainsboro;
   text-decoration: none;
+  pointer-events: auto
 }
 
 .navbar a:active, a:hover, a:visited {
