Rounded border on navigation bar.

--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -6,6 +6,7 @@
   background-color: rgb(97, 97, 97);
   font-size: 200%;
   font-family: 'Courier New', Courier, monospace;
+  -webkit-border-radius: 40px;
 }
 
 .navbar ul {
